// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`regresión sin documentos: financiera > A_sana (prendario_empresas) 1`] = `
{
  "puntaje": {
    "categoria": "moderado",
    "final": 45,
    "piso": null,
    "ponderado": 45,
  },
  "semaforos": {
    "anticipos_clientes": null,
    "anticipos_ventas": null,
    "autofinanciamiento": null,
    "bienes_cambio_deuda_cp": null,
    "brecha_crecimiento_cartera_pn": "critical",
    "calidad_ganancia": null,
    "capex_depreciacion": null,
    "capital_de_trabajo": null,
    "cargo_sobre_resultado": null,
    "cartera_financiera": null,
    "ciclo_conversion_caja": null,
    "cobertura": "healthy",
    "cobertura_intereses": null,
    "concentracion_fondeo": "critical",
    "deuda_bancaria_total": null,
    "deuda_bancaria_ventas": null,
    "deuda_comercial_bancaria": null,
    "deuda_cp_share": null,
    "deuda_dias_ventas": null,
    "deuda_ebitda": null,
    "deuda_financiera_pn": null,
    "deuda_me_share": null,
    "deuda_neta_ebitda": null,
    "dias_de_cobro": null,
    "dias_de_pago": null,
    "dias_de_stock": null,
    "dscr": null,
    "ebitda": null,
    "eficiencia": "critical",
    "endeudamiento": "healthy",
    "endeudamiento_sin_anticipos": null,
    "indice_inmovilizacion": null,
    "irregular_no_previsionada": null,
    "ktno": null,
    "liquidez_90d": "critical",
    "liquidez_acida": null,
    "liquidez_corriente": null,
    "liquidez_corriente_sin_anticipos": null,
    "liquidez_inmediata": "critical",
    "margen_bruto": null,
    "margen_ebitda": null,
    "margen_ebitda_promedio": null,
    "margen_neto": null,
    "mora": "healthy",
    "pn_activo": "healthy",
    "pn_ajustado": null,
    "pn_ajustado_sobre_pn": null,
    "roa": "healthy",
    "roe": null,
    "solvencia": null,
    "top10_sobre_cartera": null,
  },
  "senales": [
    {
      "detalle": "Liquidez a 90 días 0,89x: lo que cobra y tiene en caja no alcanza para los pasivos que vencen.",
      "id": "liquidez_90d_baja",
      "piso": null,
      "severidad": "alta",
    },
    {
      "detalle": "La principal fuente de fondeo es el 80,0% del total.",
      "id": "fondeo_concentrado",
      "piso": null,
      "severidad": "media",
    },
    {
      "detalle": "La cartera crece 132 p.p. por encima del PN (máximo 40 p.p.).",
      "id": "cartera_crece_sobre_pn",
      "piso": null,
      "severidad": "media",
    },
  ],
}
`;

exports[`regresión sin documentos: financiera > B_estresada (prendario_empresas) 1`] = `
{
  "puntaje": {
    "categoria": "moderado",
    "final": 45,
    "piso": null,
    "ponderado": 45,
  },
  "semaforos": {
    "anticipos_clientes": null,
    "anticipos_ventas": null,
    "autofinanciamiento": null,
    "bienes_cambio_deuda_cp": null,
    "brecha_crecimiento_cartera_pn": "critical",
    "calidad_ganancia": null,
    "capex_depreciacion": null,
    "capital_de_trabajo": null,
    "cargo_sobre_resultado": null,
    "cartera_financiera": null,
    "ciclo_conversion_caja": null,
    "cobertura": "critical",
    "cobertura_intereses": null,
    "concentracion_fondeo": "critical",
    "deuda_bancaria_total": null,
    "deuda_bancaria_ventas": null,
    "deuda_comercial_bancaria": null,
    "deuda_cp_share": null,
    "deuda_dias_ventas": null,
    "deuda_ebitda": null,
    "deuda_financiera_pn": null,
    "deuda_me_share": null,
    "deuda_neta_ebitda": null,
    "dias_de_cobro": null,
    "dias_de_pago": null,
    "dias_de_stock": null,
    "dscr": null,
    "ebitda": null,
    "eficiencia": "critical",
    "endeudamiento": "healthy",
    "endeudamiento_sin_anticipos": null,
    "indice_inmovilizacion": null,
    "irregular_no_previsionada": null,
    "ktno": null,
    "liquidez_90d": "critical",
    "liquidez_acida": null,
    "liquidez_corriente": null,
    "liquidez_corriente_sin_anticipos": null,
    "liquidez_inmediata": "critical",
    "margen_bruto": null,
    "margen_ebitda": null,
    "margen_ebitda_promedio": null,
    "margen_neto": null,
    "mora": "critical",
    "pn_activo": "healthy",
    "pn_ajustado": null,
    "pn_ajustado_sobre_pn": null,
    "roa": "healthy",
    "roe": null,
    "solvencia": null,
    "top10_sobre_cartera": null,
  },
  "senales": [
    {
      "detalle": "Mora 12,0% (fuente: balance); alerta del sub-segmento: 10,0%.",
      "id": "mora_alta",
      "piso": null,
      "severidad": "alta",
    },
    {
      "detalle": "Previsiones / cartera > 90 días 50,0% (fuente: balance) (mínimo 70,0%).",
      "id": "cobertura_mora_baja",
      "piso": null,
      "severidad": "alta",
    },
    {
      "detalle": "PN ajustado $ 199 miles: 79,6% del PN (mínimo 80,0%).",
      "id": "pn_ajustado_bajo",
      "piso": null,
      "severidad": "alta",
    },
    {
      "detalle": "Liquidez a 90 días 0,89x: lo que cobra y tiene en caja no alcanza para los pasivos que vencen.",
      "id": "liquidez_90d_baja",
      "piso": null,
      "severidad": "alta",
    },
    {
      "detalle": "La principal fuente de fondeo es el 80,0% del total.",
      "id": "fondeo_concentrado",
      "piso": null,
      "severidad": "media",
    },
    {
      "detalle": "La cartera crece 132 p.p. por encima del PN (máximo 40 p.p.).",
      "id": "cartera_crece_sobre_pn",
      "piso": null,
      "severidad": "media",
    },
  ],
}
`;

exports[`regresión sin documentos: financiera > D_pn_ajustado_negativo (consumo) 1`] = `
{
  "puntaje": {
    "categoria": "critico",
    "final": 85,
    "piso": {
      "motivo": "La mora no cubierta se come el patrimonio",
      "piso": 85,
    },
    "ponderado": 45,
  },
  "semaforos": {
    "anticipos_clientes": null,
    "anticipos_ventas": null,
    "autofinanciamiento": null,
    "bienes_cambio_deuda_cp": null,
    "brecha_crecimiento_cartera_pn": "critical",
    "calidad_ganancia": null,
    "capex_depreciacion": null,
    "capital_de_trabajo": null,
    "cargo_sobre_resultado": null,
    "cartera_financiera": null,
    "ciclo_conversion_caja": null,
    "cobertura": "critical",
    "cobertura_intereses": null,
    "concentracion_fondeo": "critical",
    "deuda_bancaria_total": null,
    "deuda_bancaria_ventas": null,
    "deuda_comercial_bancaria": null,
    "deuda_cp_share": null,
    "deuda_dias_ventas": null,
    "deuda_ebitda": null,
    "deuda_financiera_pn": null,
    "deuda_me_share": null,
    "deuda_neta_ebitda": null,
    "dias_de_cobro": null,
    "dias_de_pago": null,
    "dias_de_stock": null,
    "dscr": null,
    "ebitda": null,
    "eficiencia": "critical",
    "endeudamiento": "healthy",
    "endeudamiento_sin_anticipos": null,
    "indice_inmovilizacion": null,
    "irregular_no_previsionada": null,
    "ktno": null,
    "liquidez_90d": "critical",
    "liquidez_acida": null,
    "liquidez_corriente": null,
    "liquidez_corriente_sin_anticipos": null,
    "liquidez_inmediata": "critical",
    "margen_bruto": null,
    "margen_ebitda": null,
    "margen_ebitda_promedio": null,
    "margen_neto": null,
    "mora": "critical",
    "pn_activo": "healthy",
    "pn_ajustado": null,
    "pn_ajustado_sobre_pn": null,
    "roa": "healthy",
    "roe": null,
    "solvencia": null,
    "top10_sobre_cartera": null,
  },
  "senales": [
    {
      "detalle": "PN ajustado $ -50 miles (PN − cartera > 90 días no previsionada).",
      "id": "pn_ajustado_negativo",
      "piso": 85,
      "severidad": "critica",
    },
    {
      "detalle": "Mora 47,1% (fuente: balance); alerta del sub-segmento: 15,0%.",
      "id": "mora_alta",
      "piso": null,
      "severidad": "alta",
    },
    {
      "detalle": "Previsiones / cartera > 90 días 25,0% (fuente: balance) (mínimo 70,0%).",
      "id": "cobertura_mora_baja",
      "piso": null,
      "severidad": "alta",
    },
    {
      "detalle": "Liquidez a 90 días 0,89x: lo que cobra y tiene en caja no alcanza para los pasivos que vencen.",
      "id": "liquidez_90d_baja",
      "piso": null,
      "severidad": "alta",
    },
    {
      "detalle": "La principal fuente de fondeo es el 80,0% del total.",
      "id": "fondeo_concentrado",
      "piso": null,
      "severidad": "media",
    },
    {
      "detalle": "La cartera crece 132 p.p. por encima del PN (máximo 40 p.p.).",
      "id": "cartera_crece_sobre_pn",
      "piso": null,
      "severidad": "media",
    },
  ],
}
`;

exports[`regresión sin documentos: financiera > sin_bloque (factoring) 1`] = `
{
  "puntaje": {
    "categoria": "moderado",
    "final": 45,
    "piso": null,
    "ponderado": 45,
  },
  "semaforos": {
    "anticipos_clientes": null,
    "anticipos_ventas": null,
    "autofinanciamiento": null,
    "bienes_cambio_deuda_cp": null,
    "brecha_crecimiento_cartera_pn": null,
    "calidad_ganancia": null,
    "capex_depreciacion": null,
    "capital_de_trabajo": null,
    "cargo_sobre_resultado": null,
    "cartera_financiera": null,
    "ciclo_conversion_caja": null,
    "cobertura": null,
    "cobertura_intereses": null,
    "concentracion_fondeo": null,
    "deuda_bancaria_total": null,
    "deuda_bancaria_ventas": null,
    "deuda_comercial_bancaria": null,
    "deuda_cp_share": null,
    "deuda_dias_ventas": null,
    "deuda_ebitda": null,
    "deuda_financiera_pn": null,
    "deuda_me_share": null,
    "deuda_neta_ebitda": null,
    "dias_de_cobro": null,
    "dias_de_pago": null,
    "dias_de_stock": null,
    "dscr": null,
    "ebitda": null,
    "eficiencia": null,
    "endeudamiento": "healthy",
    "endeudamiento_sin_anticipos": null,
    "indice_inmovilizacion": null,
    "irregular_no_previsionada": null,
    "ktno": null,
    "liquidez_90d": null,
    "liquidez_acida": null,
    "liquidez_corriente": null,
    "liquidez_corriente_sin_anticipos": null,
    "liquidez_inmediata": "critical",
    "margen_bruto": null,
    "margen_ebitda": null,
    "margen_ebitda_promedio": null,
    "margen_neto": null,
    "mora": null,
    "pn_activo": "healthy",
    "pn_ajustado": null,
    "pn_ajustado_sobre_pn": null,
    "roa": "healthy",
    "roe": null,
    "solvencia": null,
    "top10_sobre_cartera": null,
  },
  "senales": [
    {
      "detalle": "No hay reporte de mora ni bloque financiero del balance: no se puede medir la calidad de la cartera.",
      "id": "sin_datos_cartera",
      "piso": null,
      "severidad": "alta",
    },
  ],
}
`;

exports[`regresión sin documentos: perfiles productivos > agro · con_anticipos 1`] = `
{
  "puntaje": {
    "categoria": "moderado",
    "final": 36,
    "piso": null,
    "ponderado": 36,
  },
  "semaforos": {
    "anticipos_clientes": null,
    "anticipos_ventas": null,
    "autofinanciamiento": null,
    "bienes_cambio_deuda_cp": null,
    "brecha_crecimiento_cartera_pn": null,
    "calidad_ganancia": null,
    "capex_depreciacion": null,
    "capital_de_trabajo": null,
    "cargo_sobre_resultado": null,
    "cartera_financiera": null,
    "ciclo_conversion_caja": null,
    "cobertura": null,
    "cobertura_intereses": "healthy",
    "concentracion_fondeo": null,
    "deuda_bancaria_total": null,
    "deuda_bancaria_ventas": null,
    "deuda_comercial_bancaria": null,
    "deuda_cp_share": null,
    "deuda_dias_ventas": null,
    "deuda_ebitda": "healthy",
    "deuda_financiera_pn": null,
    "deuda_me_share": null,
    "deuda_neta_ebitda": "healthy",
    "dias_de_cobro": null,
    "dias_de_pago": null,
    "dias_de_stock": null,
    "dscr": "healthy",
    "ebitda": null,
    "eficiencia": null,
    "endeudamiento": null,
    "endeudamiento_sin_anticipos": null,
    "indice_inmovilizacion": null,
    "irregular_no_previsionada": null,
    "ktno": null,
    "liquidez_90d": null,
    "liquidez_acida": null,
    "liquidez_corriente": "alert",
    "liquidez_corriente_sin_anticipos": null,
    "liquidez_inmediata": "critical",
    "margen_bruto": null,
    "margen_ebitda": "healthy",
    "margen_ebitda_promedio": null,
    "margen_neto": null,
    "mora": null,
    "pn_activo": null,
    "pn_ajustado": null,
    "pn_ajustado_sobre_pn": null,
    "roa": null,
    "roe": null,
    "solvencia": "critical",
    "top10_sobre_cartera": null,
  },
  "senales": [
    {
      "detalle": "Pasivo / patrimonio neto 3,71x.",
      "id": "apalancamiento_alto",
      "piso": null,
      "severidad": "media",
    },
  ],
}
`;

exports[`regresión sin documentos: perfiles productivos > agro · sano 1`] = `
{
  "puntaje": {
    "categoria": "moderado",
    "final": 36,
    "piso": null,
    "ponderado": 36,
  },
  "semaforos": {
    "anticipos_clientes": null,
    "anticipos_ventas": null,
    "autofinanciamiento": null,
    "bienes_cambio_deuda_cp": null,
    "brecha_crecimiento_cartera_pn": null,
    "calidad_ganancia": null,
    "capex_depreciacion": null,
    "capital_de_trabajo": null,
    "cargo_sobre_resultado": null,
    "cartera_financiera": null,
    "ciclo_conversion_caja": null,
    "cobertura": null,
    "cobertura_intereses": "healthy",
    "concentracion_fondeo": null,
    "deuda_bancaria_total": null,
    "deuda_bancaria_ventas": null,
    "deuda_comercial_bancaria": null,
    "deuda_cp_share": null,
    "deuda_dias_ventas": null,
    "deuda_ebitda": "healthy",
    "deuda_financiera_pn": null,
    "deuda_me_share": null,
    "deuda_neta_ebitda": "healthy",
    "dias_de_cobro": null,
    "dias_de_pago": null,
    "dias_de_stock": null,
    "dscr": "healthy",
    "ebitda": null,
    "eficiencia": null,
    "endeudamiento": null,
    "endeudamiento_sin_anticipos": null,
    "indice_inmovilizacion": null,
    "irregular_no_previsionada": null,
    "ktno": null,
    "liquidez_90d": null,
    "liquidez_acida": null,
    "liquidez_corriente": "healthy",
    "liquidez_corriente_sin_anticipos": null,
    "liquidez_inmediata": "critical",
    "margen_bruto": null,
    "margen_ebitda": "healthy",
    "margen_ebitda_promedio": null,
    "margen_neto": null,
    "mora": null,
    "pn_activo": null,
    "pn_ajustado": null,
    "pn_ajustado_sobre_pn": null,
    "roa": null,
    "roe": null,
    "solvencia": "alert",
    "top10_sobre_cartera": null,
  },
  "senales": [],
}
`;

exports[`regresión sin documentos: perfiles productivos > comercio · con_anticipos 1`] = `
{
  "puntaje": {
    "categoria": "moderado",
    "final": 36,
    "piso": null,
    "ponderado": 36,
  },
  "semaforos": {
    "anticipos_clientes": null,
    "anticipos_ventas": null,
    "autofinanciamiento": null,
    "bienes_cambio_deuda_cp": null,
    "brecha_crecimiento_cartera_pn": null,
    "calidad_ganancia": "healthy",
    "capex_depreciacion": null,
    "capital_de_trabajo": null,
    "cargo_sobre_resultado": null,
    "cartera_financiera": null,
    "ciclo_conversion_caja": null,
    "cobertura": null,
    "cobertura_intereses": "healthy",
    "concentracion_fondeo": null,
    "deuda_bancaria_total": null,
    "deuda_bancaria_ventas": null,
    "deuda_comercial_bancaria": null,
    "deuda_cp_share": null,
    "deuda_dias_ventas": null,
    "deuda_ebitda": "healthy",
    "deuda_financiera_pn": null,
    "deuda_me_share": null,
    "deuda_neta_ebitda": "healthy",
    "dias_de_cobro": null,
    "dias_de_pago": null,
    "dias_de_stock": null,
    "dscr": "healthy",
    "ebitda": null,
    "eficiencia": null,
    "endeudamiento": null,
    "endeudamiento_sin_anticipos": null,
    "indice_inmovilizacion": null,
    "irregular_no_previsionada": null,
    "ktno": null,
    "liquidez_90d": null,
    "liquidez_acida": "alert",
    "liquidez_corriente": "alert",
    "liquidez_corriente_sin_anticipos": null,
    "liquidez_inmediata": "critical",
    "margen_bruto": null,
    "margen_ebitda": "healthy",
    "margen_ebitda_promedio": null,
    "margen_neto": null,
    "mora": null,
    "pn_activo": null,
    "pn_ajustado": null,
    "pn_ajustado_sobre_pn": null,
    "roa": null,
    "roe": null,
    "solvencia": "critical",
    "top10_sobre_cartera": null,
  },
  "senales": [],
}
`;

exports[`regresión sin documentos: perfiles productivos > comercio · sano 1`] = `
{
  "puntaje": {
    "categoria": "moderado",
    "final": 36,
    "piso": null,
    "ponderado": 36,
  },
  "semaforos": {
    "anticipos_clientes": null,
    "anticipos_ventas": null,
    "autofinanciamiento": null,
    "bienes_cambio_deuda_cp": null,
    "brecha_crecimiento_cartera_pn": null,
    "calidad_ganancia": "healthy",
    "capex_depreciacion": null,
    "capital_de_trabajo": null,
    "cargo_sobre_resultado": null,
    "cartera_financiera": null,
    "ciclo_conversion_caja": null,
    "cobertura": null,
    "cobertura_intereses": "healthy",
    "concentracion_fondeo": null,
    "deuda_bancaria_total": null,
    "deuda_bancaria_ventas": null,
    "deuda_comercial_bancaria": null,
    "deuda_cp_share": null,
    "deuda_dias_ventas": null,
    "deuda_ebitda": "healthy",
    "deuda_financiera_pn": null,
    "deuda_me_share": null,
    "deuda_neta_ebitda": "healthy",
    "dias_de_cobro": null,
    "dias_de_pago": null,
    "dias_de_stock": null,
    "dscr": "healthy",
    "ebitda": null,
    "eficiencia": null,
    "endeudamiento": null,
    "endeudamiento_sin_anticipos": null,
    "indice_inmovilizacion": null,
    "irregular_no_previsionada": null,
    "ktno": null,
    "liquidez_90d": null,
    "liquidez_acida": "healthy",
    "liquidez_corriente": "healthy",
    "liquidez_corriente_sin_anticipos": null,
    "liquidez_inmediata": "critical",
    "margen_bruto": null,
    "margen_ebitda": "healthy",
    "margen_ebitda_promedio": null,
    "margen_neto": null,
    "mora": null,
    "pn_activo": null,
    "pn_ajustado": null,
    "pn_ajustado_sobre_pn": null,
    "roa": null,
    "roe": null,
    "solvencia": "alert",
    "top10_sobre_cartera": null,
  },
  "senales": [],
}
`;

exports[`regresión sin documentos: perfiles productivos > construccion · con_anticipos 1`] = `
{
  "puntaje": {
    "categoria": "moderado",
    "final": 36,
    "piso": null,
    "ponderado": 36,
  },
  "semaforos": {
    "anticipos_clientes": null,
    "anticipos_ventas": null,
    "autofinanciamiento": null,
    "bienes_cambio_deuda_cp": null,
    "brecha_crecimiento_cartera_pn": null,
    "calidad_ganancia": "healthy",
    "capex_depreciacion": null,
    "capital_de_trabajo": null,
    "cargo_sobre_resultado": null,
    "cartera_financiera": null,
    "ciclo_conversion_caja": null,
    "cobertura": null,
    "cobertura_intereses": "healthy",
    "concentracion_fondeo": null,
    "deuda_bancaria_total": null,
    "deuda_bancaria_ventas": null,
    "deuda_comercial_bancaria": null,
    "deuda_cp_share": null,
    "deuda_dias_ventas": null,
    "deuda_ebitda": "healthy",
    "deuda_financiera_pn": null,
    "deuda_me_share": null,
    "deuda_neta_ebitda": "healthy",
    "dias_de_cobro": null,
    "dias_de_pago": null,
    "dias_de_stock": null,
    "dscr": "healthy",
    "ebitda": null,
    "eficiencia": null,
    "endeudamiento": null,
    "endeudamiento_sin_anticipos": null,
    "indice_inmovilizacion": null,
    "irregular_no_previsionada": null,
    "ktno": null,
    "liquidez_90d": null,
    "liquidez_acida": "critical",
    "liquidez_corriente": "healthy",
    "liquidez_corriente_sin_anticipos": null,
    "liquidez_inmediata": "critical",
    "margen_bruto": null,
    "margen_ebitda": "healthy",
    "margen_ebitda_promedio": null,
    "margen_neto": null,
    "mora": null,
    "pn_activo": null,
    "pn_ajustado": null,
    "pn_ajustado_sobre_pn": null,
    "roa": null,
    "roe": null,
    "solvencia": "critical",
    "top10_sobre_cartera": null,
  },
  "senales": [
    {
      "detalle": "Prueba ácida 0,58x: la liquidez depende de vender stock.",
      "id": "prueba_acida_baja",
      "piso": null,
      "severidad": "media",
    },
  ],
}
`;

exports[`regresión sin documentos: perfiles productivos > construccion · sano 1`] = `
{
  "puntaje": {
    "categoria": "moderado",
    "final": 36,
    "piso": null,
    "ponderado": 36,
  },
  "semaforos": {
    "anticipos_clientes": null,
    "anticipos_ventas": null,
    "autofinanciamiento": null,
    "bienes_cambio_deuda_cp": null,
    "brecha_crecimiento_cartera_pn": null,
    "calidad_ganancia": "healthy",
    "capex_depreciacion": null,
    "capital_de_trabajo": null,
    "cargo_sobre_resultado": null,
    "cartera_financiera": null,
    "ciclo_conversion_caja": null,
    "cobertura": null,
    "cobertura_intereses": "healthy",
    "concentracion_fondeo": null,
    "deuda_bancaria_total": null,
    "deuda_bancaria_ventas": null,
    "deuda_comercial_bancaria": null,
    "deuda_cp_share": null,
    "deuda_dias_ventas": null,
    "deuda_ebitda": "healthy",
    "deuda_financiera_pn": null,
    "deuda_me_share": null,
    "deuda_neta_ebitda": "healthy",
    "dias_de_cobro": null,
    "dias_de_pago": null,
    "dias_de_stock": null,
    "dscr": "healthy",
    "ebitda": null,
    "eficiencia": null,
    "endeudamiento": null,
    "endeudamiento_sin_anticipos": null,
    "indice_inmovilizacion": null,
    "irregular_no_previsionada": null,
    "ktno": null,
    "liquidez_90d": null,
    "liquidez_acida": "healthy",
    "liquidez_corriente": "healthy",
    "liquidez_corriente_sin_anticipos": null,
    "liquidez_inmediata": "critical",
    "margen_bruto": null,
    "margen_ebitda": "healthy",
    "margen_ebitda_promedio": null,
    "margen_neto": null,
    "mora": null,
    "pn_activo": null,
    "pn_ajustado": null,
    "pn_ajustado_sobre_pn": null,
    "roa": null,
    "roe": null,
    "solvencia": "alert",
    "top10_sobre_cartera": null,
  },
  "senales": [],
}
`;

exports[`regresión sin documentos: perfiles productivos > generico · con_anticipos 1`] = `
{
  "puntaje": {
    "categoria": "moderado",
    "final": 36,
    "piso": null,
    "ponderado": 36,
  },
  "semaforos": {
    "anticipos_clientes": null,
    "anticipos_ventas": null,
    "autofinanciamiento": null,
    "bienes_cambio_deuda_cp": null,
    "brecha_crecimiento_cartera_pn": null,
    "calidad_ganancia": "healthy",
    "capex_depreciacion": null,
    "capital_de_trabajo": null,
    "cargo_sobre_resultado": null,
    "cartera_financiera": null,
    "ciclo_conversion_caja": null,
    "cobertura": null,
    "cobertura_intereses": "healthy",
    "concentracion_fondeo": null,
    "deuda_bancaria_total": null,
    "deuda_bancaria_ventas": null,
    "deuda_comercial_bancaria": null,
    "deuda_cp_share": null,
    "deuda_dias_ventas": null,
    "deuda_ebitda": "healthy",
    "deuda_financiera_pn": null,
    "deuda_me_share": null,
    "deuda_neta_ebitda": "healthy",
    "dias_de_cobro": null,
    "dias_de_pago": null,
    "dias_de_stock": null,
    "dscr": "healthy",
    "ebitda": null,
    "eficiencia": null,
    "endeudamiento": null,
    "endeudamiento_sin_anticipos": null,
    "indice_inmovilizacion": null,
    "irregular_no_previsionada": null,
    "ktno": null,
    "liquidez_90d": null,
    "liquidez_acida": "critical",
    "liquidez_corriente": "alert",
    "liquidez_corriente_sin_anticipos": null,
    "liquidez_inmediata": "critical",
    "margen_bruto": null,
    "margen_ebitda": "healthy",
    "margen_ebitda_promedio": null,
    "margen_neto": null,
    "mora": null,
    "pn_activo": null,
    "pn_ajustado": null,
    "pn_ajustado_sobre_pn": null,
    "roa": null,
    "roe": null,
    "solvencia": "critical",
    "top10_sobre_cartera": null,
  },
  "senales": [
    {
      "detalle": "Pasivo / patrimonio neto 3,71x.",
      "id": "apalancamiento_alto",
      "piso": null,
      "severidad": "media",
    },
    {
      "detalle": "Prueba ácida 0,58x: la liquidez depende de vender stock.",
      "id": "prueba_acida_baja",
      "piso": null,
      "severidad": "media",
    },
  ],
}
`;

exports[`regresión sin documentos: perfiles productivos > generico · sano 1`] = `
{
  "puntaje": {
    "categoria": "moderado",
    "final": 36,
    "piso": null,
    "ponderado": 36,
  },
  "semaforos": {
    "anticipos_clientes": null,
    "anticipos_ventas": null,
    "autofinanciamiento": null,
    "bienes_cambio_deuda_cp": null,
    "brecha_crecimiento_cartera_pn": null,
    "calidad_ganancia": "healthy",
    "capex_depreciacion": null,
    "capital_de_trabajo": null,
    "cargo_sobre_resultado": null,
    "cartera_financiera": null,
    "ciclo_conversion_caja": null,
    "cobertura": null,
    "cobertura_intereses": "healthy",
    "concentracion_fondeo": null,
    "deuda_bancaria_total": null,
    "deuda_bancaria_ventas": null,
    "deuda_comercial_bancaria": null,
    "deuda_cp_share": null,
    "deuda_dias_ventas": null,
    "deuda_ebitda": "healthy",
    "deuda_financiera_pn": null,
    "deuda_me_share": null,
    "deuda_neta_ebitda": "healthy",
    "dias_de_cobro": null,
    "dias_de_pago": null,
    "dias_de_stock": null,
    "dscr": "healthy",
    "ebitda": null,
    "eficiencia": null,
    "endeudamiento": null,
    "endeudamiento_sin_anticipos": null,
    "indice_inmovilizacion": null,
    "irregular_no_previsionada": null,
    "ktno": null,
    "liquidez_90d": null,
    "liquidez_acida": "healthy",
    "liquidez_corriente": "healthy",
    "liquidez_corriente_sin_anticipos": null,
    "liquidez_inmediata": "critical",
    "margen_bruto": null,
    "margen_ebitda": "healthy",
    "margen_ebitda_promedio": null,
    "margen_neto": null,
    "mora": null,
    "pn_activo": null,
    "pn_ajustado": null,
    "pn_ajustado_sobre_pn": null,
    "roa": null,
    "roe": null,
    "solvencia": "alert",
    "top10_sobre_cartera": null,
  },
  "senales": [],
}
`;

exports[`regresión sin documentos: perfiles productivos > industria · con_anticipos 1`] = `
{
  "puntaje": {
    "categoria": "moderado",
    "final": 36,
    "piso": null,
    "ponderado": 36,
  },
  "semaforos": {
    "anticipos_clientes": null,
    "anticipos_ventas": null,
    "autofinanciamiento": null,
    "bienes_cambio_deuda_cp": null,
    "brecha_crecimiento_cartera_pn": null,
    "calidad_ganancia": "healthy",
    "capex_depreciacion": null,
    "capital_de_trabajo": null,
    "cargo_sobre_resultado": null,
    "cartera_financiera": null,
    "ciclo_conversion_caja": null,
    "cobertura": null,
    "cobertura_intereses": "healthy",
    "concentracion_fondeo": null,
    "deuda_bancaria_total": null,
    "deuda_bancaria_ventas": null,
    "deuda_comercial_bancaria": null,
    "deuda_cp_share": null,
    "deuda_dias_ventas": null,
    "deuda_ebitda": "healthy",
    "deuda_financiera_pn": null,
    "deuda_me_share": null,
    "deuda_neta_ebitda": "healthy",
    "dias_de_cobro": null,
    "dias_de_pago": null,
    "dias_de_stock": null,
    "dscr": "healthy",
    "ebitda": null,
    "eficiencia": null,
    "endeudamiento": null,
    "endeudamiento_sin_anticipos": null,
    "indice_inmovilizacion": null,
    "irregular_no_previsionada": null,
    "ktno": null,
    "liquidez_90d": null,
    "liquidez_acida": "critical",
    "liquidez_corriente": "alert",
    "liquidez_corriente_sin_anticipos": null,
    "liquidez_inmediata": "critical",
    "margen_bruto": null,
    "margen_ebitda": "healthy",
    "margen_ebitda_promedio": null,
    "margen_neto": null,
    "mora": null,
    "pn_activo": null,
    "pn_ajustado": null,
    "pn_ajustado_sobre_pn": null,
    "roa": null,
    "roe": null,
    "solvencia": "critical",
    "top10_sobre_cartera": null,
  },
  "senales": [
    {
      "detalle": "Pasivo / patrimonio neto 3,71x.",
      "id": "apalancamiento_alto",
      "piso": null,
      "severidad": "media",
    },
    {
      "detalle": "Prueba ácida 0,58x: la liquidez depende de vender stock.",
      "id": "prueba_acida_baja",
      "piso": null,
      "severidad": "media",
    },
  ],
}
`;

exports[`regresión sin documentos: perfiles productivos > industria · sano 1`] = `
{
  "puntaje": {
    "categoria": "moderado",
    "final": 36,
    "piso": null,
    "ponderado": 36,
  },
  "semaforos": {
    "anticipos_clientes": null,
    "anticipos_ventas": null,
    "autofinanciamiento": null,
    "bienes_cambio_deuda_cp": null,
    "brecha_crecimiento_cartera_pn": null,
    "calidad_ganancia": "healthy",
    "capex_depreciacion": null,
    "capital_de_trabajo": null,
    "cargo_sobre_resultado": null,
    "cartera_financiera": null,
    "ciclo_conversion_caja": null,
    "cobertura": null,
    "cobertura_intereses": "healthy",
    "concentracion_fondeo": null,
    "deuda_bancaria_total": null,
    "deuda_bancaria_ventas": null,
    "deuda_comercial_bancaria": null,
    "deuda_cp_share": null,
    "deuda_dias_ventas": null,
    "deuda_ebitda": "healthy",
    "deuda_financiera_pn": null,
    "deuda_me_share": null,
    "deuda_neta_ebitda": "healthy",
    "dias_de_cobro": null,
    "dias_de_pago": null,
    "dias_de_stock": null,
    "dscr": "healthy",
    "ebitda": null,
    "eficiencia": null,
    "endeudamiento": null,
    "endeudamiento_sin_anticipos": null,
    "indice_inmovilizacion": null,
    "irregular_no_previsionada": null,
    "ktno": null,
    "liquidez_90d": null,
    "liquidez_acida": "healthy",
    "liquidez_corriente": "healthy",
    "liquidez_corriente_sin_anticipos": null,
    "liquidez_inmediata": "critical",
    "margen_bruto": null,
    "margen_ebitda": "healthy",
    "margen_ebitda_promedio": null,
    "margen_neto": null,
    "mora": null,
    "pn_activo": null,
    "pn_ajustado": null,
    "pn_ajustado_sobre_pn": null,
    "roa": null,
    "roe": null,
    "solvencia": "alert",
    "top10_sobre_cartera": null,
  },
  "senales": [],
}
`;

exports[`regresión sin documentos: perfiles productivos > servicios · con_anticipos 1`] = `
{
  "puntaje": {
    "categoria": "moderado",
    "final": 36,
    "piso": null,
    "ponderado": 36,
  },
  "semaforos": {
    "anticipos_clientes": null,
    "anticipos_ventas": null,
    "autofinanciamiento": null,
    "bienes_cambio_deuda_cp": null,
    "brecha_crecimiento_cartera_pn": null,
    "calidad_ganancia": "healthy",
    "capex_depreciacion": null,
    "capital_de_trabajo": null,
    "cargo_sobre_resultado": null,
    "cartera_financiera": null,
    "ciclo_conversion_caja": null,
    "cobertura": null,
    "cobertura_intereses": "healthy",
    "concentracion_fondeo": null,
    "deuda_bancaria_total": null,
    "deuda_bancaria_ventas": null,
    "deuda_comercial_bancaria": null,
    "deuda_cp_share": null,
    "deuda_dias_ventas": null,
    "deuda_ebitda": "healthy",
    "deuda_financiera_pn": null,
    "deuda_me_share": null,
    "deuda_neta_ebitda": "healthy",
    "dias_de_cobro": null,
    "dias_de_pago": null,
    "dias_de_stock": null,
    "dscr": "healthy",
    "ebitda": null,
    "eficiencia": null,
    "endeudamiento": null,
    "endeudamiento_sin_anticipos": null,
    "indice_inmovilizacion": null,
    "irregular_no_previsionada": null,
    "ktno": null,
    "liquidez_90d": null,
    "liquidez_acida": "critical",
    "liquidez_corriente": "alert",
    "liquidez_corriente_sin_anticipos": null,
    "liquidez_inmediata": "critical",
    "margen_bruto": null,
    "margen_ebitda": "healthy",
    "margen_ebitda_promedio": null,
    "margen_neto": null,
    "mora": null,
    "pn_activo": null,
    "pn_ajustado": null,
    "pn_ajustado_sobre_pn": null,
    "roa": null,
    "roe": null,
    "solvencia": "critical",
    "top10_sobre_cartera": null,
  },
  "senales": [
    {
      "detalle": "Pasivo / patrimonio neto 3,71x.",
      "id": "apalancamiento_alto",
      "piso": null,
      "severidad": "media",
    },
    {
      "detalle": "Prueba ácida 0,58x: la liquidez depende de vender stock.",
      "id": "prueba_acida_baja",
      "piso": null,
      "severidad": "media",
    },
  ],
}
`;

exports[`regresión sin documentos: perfiles productivos > servicios · sano 1`] = `
{
  "puntaje": {
    "categoria": "moderado",
    "final": 36,
    "piso": null,
    "ponderado": 36,
  },
  "semaforos": {
    "anticipos_clientes": null,
    "anticipos_ventas": null,
    "autofinanciamiento": null,
    "bienes_cambio_deuda_cp": null,
    "brecha_crecimiento_cartera_pn": null,
    "calidad_ganancia": "healthy",
    "capex_depreciacion": null,
    "capital_de_trabajo": null,
    "cargo_sobre_resultado": null,
    "cartera_financiera": null,
    "ciclo_conversion_caja": null,
    "cobertura": null,
    "cobertura_intereses": "healthy",
    "concentracion_fondeo": null,
    "deuda_bancaria_total": null,
    "deuda_bancaria_ventas": null,
    "deuda_comercial_bancaria": null,
    "deuda_cp_share": null,
    "deuda_dias_ventas": null,
    "deuda_ebitda": "healthy",
    "deuda_financiera_pn": null,
    "deuda_me_share": null,
    "deuda_neta_ebitda": "healthy",
    "dias_de_cobro": null,
    "dias_de_pago": null,
    "dias_de_stock": null,
    "dscr": "healthy",
    "ebitda": null,
    "eficiencia": null,
    "endeudamiento": null,
    "endeudamiento_sin_anticipos": null,
    "indice_inmovilizacion": null,
    "irregular_no_previsionada": null,
    "ktno": null,
    "liquidez_90d": null,
    "liquidez_acida": "healthy",
    "liquidez_corriente": "healthy",
    "liquidez_corriente_sin_anticipos": null,
    "liquidez_inmediata": "critical",
    "margen_bruto": null,
    "margen_ebitda": "healthy",
    "margen_ebitda_promedio": null,
    "margen_neto": null,
    "mora": null,
    "pn_activo": null,
    "pn_ajustado": null,
    "pn_ajustado_sobre_pn": null,
    "roa": null,
    "roe": null,
    "solvencia": "alert",
    "top10_sobre_cartera": null,
  },
  "senales": [],
}
`;
